@@ -1,3 +1,11 @@
+2008-03-13  Stefan Kost  <ensonic@users.sf.net>
+
+	* FSM/PhatMan/Chorus.cpp:
+	  Copy result data back.
+
+	* common/mdk/mdk.h:
+	  Formatting.
+
 2008-03-12  Stefan Kost  <ensonic@users.sf.net>
 
 	* FSM/PhatMan/Chorus.cpp:
